# wayinfo

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: args.rs  errors.rs  ime.rs  main.rs  player.rs  system.rs  tmux.rs  utils.rs  waybar.rs  weather.rs
