[package]
name = "wayinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dbus = "0.9"
log = "0.4"
miette = "7.2"
notify-rust = "4.11.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"
tempfile = "3.10.1"
thiserror = "1.0"
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
opt-level = "s"
debug=false
